removed register because i will be the only one admin
AQAAAAEAACcQAAAAEH0FOfp3qwYpk9F0kXNMjcYKTDkGg433cKtVUL9GRP2vpMQTpP9nML7VpkxNIgAwFA==

--- a/.gitignore
+++ b/.gitignore
@@ -487,3 +487,6 @@ $RECYCLE.BIN/
 # Vim temporary swap files
 *.swp
 Infrastructure/EntityTypeConfiguration/UserConfig.cs
+Infrastructure/Migrations
+/Infrastructure/Migrations
+Infrastructure/Migrations/AppDbContextModelSnapshot.cs
